<resources>
    <string name="app_name">Ejemplo</string>
    <string name="botonlogin">LOGEATE</string>
    <string name="crearusuario">CREAR USUARIO</string>
    <string name="nombre">NOMBRE</string>
    <string name="apellido">APELLIDO</string>
    <string name="correo">CORREO</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="direccion">DIRECCION</string>
    <string name="telefono">TELEFONO</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="atras">ATRAS</string>
    <string name="cuenta">CUENTA</string>
    <string name="home">INICIO</string>
    <string name="ajustes">AJUSTES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pagian_principal2">pagian_principal2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>