<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FONDO"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:clickable="false"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">
    android:startColor="#FFFFFF"
    android:endColor="#0000FF"
    android:angle="270"
    /*HOLA ES UNA PRUBA*/

    <EditText
        android:id="@+id/correo"
        style="@style/LOGINUSER"
        android:layout_width="336dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="256dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contrasena"
        style="@style/LOGINUSER"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonlogin"
        style="@style/BOTONESLOGIN"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="496dp"
        android:drawable="@drawable/botones_login"
        android:text="@string/botonlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="167dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TEXTOLOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="228dp"
        android:text="@string/correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TEXTOLOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="352dp"
        android:text="@string/contrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="256dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/email" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView1"
        android:layout_width="64dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="380dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/password" />

    <EditText
        android:id="@+id/chistes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="632dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingLeft="15dp"
        android:paddingBottom="100dp"

        android:textColor="#94FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>